# projects

./: .gitignore  Llama_4bit_Before_tuning.ipynb  Llama_4bit_after_tuning.ipynb  README.md
Mall Customer Segmentation/: Customer_segmentation_(Unsupervised_Learning)_Sidharth.ipynb
Speech-Emotion-Detection/: README.md
neural_net_scratch/: README.md  main.py  pyproject.toml
