[tool.poetry]
name = "neural-net-scratch"
version = "0.1.0"
description = "Neural network fron scratch in python"
authors = ["Sidharth <sidh4rth7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
